--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-pandas
-sci-kit
-numpy
-seaborn
-matplotlib
+pandas==2.1.4
+scikit-learn==1.2.2
+numpy==1.26.4
+seaborn==0.12.2
+matplotlib==3.8.0
+scipy==1.11.4
