--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pandas
+pandas==2.1.4
 scikit-learn==1.2.2
-numpy
-seaborn
-matplotlib
-streamlit
+numpy==1.26.4
+seaborn==0.12.2
+matplotlib==3.8.0
+streamlit==1.38.0
