--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pandas==2.2.2
-scikit-learn==1.5.1
-numpy==1.26.4
+pandas
+scikit-learn
+numpy
 seaborn
-matplotlib==3.9.2
-streamlit==1.40.1
+matplotlib
+streamlit
