--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-pandas
+pandas==2.1.4
 scikit-learn==1.2.2
-numpy
-seaborn
-matplotlib
-streamlit
+numpy==2.1.1
+seaborn==0.12.2
+matplotlib==3.8.0
+streamlit==1.38.0
+python==3.11.7
